# 3d-nav

./: .gitattributes  README.md
models/: Building.dae  Building.ply  Building.stl  Building.world  MultifloorBuilding.pcd  stl2pcd.py
policy/a2/: base.yaml
policy/a2/legged_gym/: config.yaml
policy/a2/robot_lab/: config.yaml
policy/g1/whole_body_tracking/gangnam_style/: G1_gangnam_style_V01.bvh_60hz.csv
policy/go2w/robot_lab/: policy.pt
policy/lite3/: base.yaml
policy/lite3/himloco/: config.yaml  policy_6_11.pt
src/pct_planner/: CMakeLists.txt
src/pct_planner/PCT_planner-main/planner/scripts/: plan.py  plan_sim.py  planner_wrapper.py
src/pct_planner/PCT_planner-main/rsc/rviz/: pct_ros.rviz
src/pct_planner/PCT_planner-main/tomography/config/: __init__.py  scene_building.py  scene_second.py  scene_spiral.py
src/pct_planner/PCT_planner-main/tomography/scripts/: tomography.py
src/pct_planner/launch/: test.launch
src/pct_planner/scripts/: setup_env.sh
src/rl_sar/: CMakeLists.txt  package.ros1.xml
src/rl_sar/3Dnav_param/: costmap_common_params.yaml  dwa_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/rl_sar/config/: 3D_nav.rviz
src/rl_sar/fsm_robot/: fsm_a2.hpp  fsm_all.hpp
src/rl_sar/launch/: gazebo.launch  movebase.launch  nav.launch  pointcloud2scan.launch
src/rl_sar/plugins/: pct_path_planner_plugin.xml
src/rl_sar/scripts/: addTime.py  footprint.py
src/rl_sar/src/: pct_path_planner.cpp  rl_sim.cpp
src/rl_sar/worlds/: MultiFloor.world  second_building.world
src/rl_sar_zoo/a2_description/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
src/rl_sar_zoo/a2_description/config/: robot_control.yaml
src/rl_sar_zoo/a2_description/launch/: a2_rviz.launch  a2_rviz.launch.py  gazebo.launch.py
src/rl_sar_zoo/a2_description/urdf/: a2_description.urdf
src/rl_sar_zoo/a2_description/xacro/: VLP-16.urdf.xacro  gazebo.xacro  my_laser.urdf.xacro  robot.xacro
src/rl_sar_zoo/b2_description/meshes/: FL_foot.dae  FR_hip.dae  RL_calf.dae  RL_thigh.dae  RR_hip.dae  RR_thigh.dae  base_link.dae
src/rl_sar_zoo/b2w_description/meshes/: FL_calf.dae  FL_foot.dae  FL_hip.dae  FL_thigh.dae  FR_calf.dae  FR_foot.dae  FR_thigh.dae  RL_foot.dae  RL_hip.dae  RR_foot.dae  base_link.dae
src/rl_sar_zoo/go2w_description/meshes/: calf_mirror.stl
src/rl_sar_zoo/go2w_description/mjcf/assets/: calf.stl  terrain.stl  untitled.stl  wheel.stl  wheel1.stl
src/rl_sar_zoo/lite3_description/xacro/: my_laser.urdf.xacro  my_sensors_imu.urdf.xacro  robot.xacro
